tests/NormalTests/paczka1/fuzzy1/33690649.err
Error in line 1: njnRmAQmI A168 93,9
Error in line 3: zFno A168 44,1
Error in line 26: 71LK11UsK S858 15,9
Error in line 27: 71LK11UsK A168 65,4
Error in line 30: 71LK11UsK S858 -1,2
Error in line 31: cjAiSvxRKU S431 3,1
Error in line 38: cjAiSvxRKU S858 10,3
